# namar_custom

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
namar_custom/: app.json  fix_app.sh  hooks.py  package.json  patches.txt  pyproject.toml
namar_custom/api/: manus_logic.py
namar_custom/namar_custom/report/order_payment_statement/: order_payment_statement.py
namar_custom/public/js/: placeholder.js
