[project]
name = "namar_custom"
version = "0.0.1"
authors = [
    { name = "Badr", email = "badrbin@gmail.com" }
]
description = "Customizations for Namar"
requires-python = ">=3.10"
dependencies = [
    "frappe"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.bench.app]
title = "Namar Custom"
publisher = "Badr"
description = "Customizations for Namar"
icon = "octicon octicon-file-directory"
color = "grey"
