[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "namar_custom"
version = "0.0.1"
description = "Customizations for Namar"
authors = [
    { name = "Badr", email = "badrbin@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "frappe"
]

[tool.setuptools]
packages = ["namar_custom"]

[tool.bench.app]
title = "Namar Custom"
publisher = "Badr"
description = "Customizations for Namar"
icon = "octicon octicon-file-directory"
color = "grey"
