[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "namar_custom"
version = "0.1.0"
description = "App مخصص لكشف حساب أوامر البيع والدفعات"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "frappe",
]

[project.urls]
Homepage = ""
Repository = ""
